@@ -1,5 +1,7 @@
 = master
 
+* Add Integer_matcher_max plugin for setting maximum integer value matched by the Integer matcher (jeremyevans)
+
 * Allow class matchers in the class_matchers plugin to skip matching based on regexp match values (jeremyevans)
 
 * Fix RodaRequest#matched_path when using unescape_path plugin (jeremyevans) (#286)
